--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"postinstall": "prisma generate",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"vercel-build": "prisma generate && prisma migrate deploy && next build"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^1.0.1",
